feat: 공지사항 기능 추가 issue #58
